# remarcable-demo

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
remarcable/: db.sqlite3  requirements.txt
remarcable/config/: asgi.py  settings.py  urls.py  wsgi.py
remarcable/remarcable/: settings.py  urls.py
remarcable/remarcabledemo/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
remarcable/remarcabledemo/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_tag.py  0003_alter_product_category_alter_product_tag.py  0004_rename_cateogry_name_category_category_name.py
remarcable/remarcabledemo/templates/: base.html  home.html
